# docuwizard

./: .gitignore  README.md  pyproject.toml
app/: main.py  main_window.py
app/image_export/: styles.py  utils.py
app/rag/: embedder.py  llm_client.py  llm_router.py  preprocessor.py  prompt_type.py  utils.py  vector_store.py
app/views/: doc_qa.py  image_converter.py
notebooks/: pdf_text_qa.ipynb
